# al-syaka-quant-ai

./: .env  .env.example  .gitignore  DEVELOPMENT_PLAN_FROM_KRITIK.md  PLAN_MARKET_DATA_SETTINGS.md  PRD_DEV_PLAN.md  README.md  TASKS_IMPLEMENTASI.md  alembic.ini  idea.md  kritik.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/ai-engine/: pyproject.toml
apps/ai-engine/src/al_syaka_ai/: __init__.py  explainability.py  labeling.py  pipeline.py
apps/ai-engine/src/al_syaka_ai/models/: __init__.py  base.py  lightgbm_model.py  transformer_model.py  xgboost_model.py
apps/api/: pyproject.toml
apps/api/src/: celery_app.py  final_decision.py  macro_bias.py  main.py  unified_signal.py
apps/api/src/collectors/: base.py  manager.py  massive.py  polygon.py  yahoo.py
apps/api/src/macro/: economic_provider.py
apps/api/src/market_structure/: __init__.py  fvg.py  liquidity.py  structures.py  suport_resistance.py
apps/api/src/paper_trading/: __init__.py  analytics.py  journal.py  position.py  signal_tracker.py  virtual_account.py
apps/api/src/routers/: ai.py  backtesting.py  indicators.py  market_data.py  market_structure.py  mt5.py  paper_trading.py  settings.py  signals.py  unified_signal.py
apps/api/src/signal_service/: __init__.py  generator.py
apps/api/src/statistical_engine/: __init__.py  combo_analysis.py  probability.py  win_rate.py
apps/api/src/tasks/: market_data.py  processing.py
apps/api/tests/: test_final_decision.py  test_macro_bias_engine.py  test_macro_integration.py  test_massive_connector.py  test_quant_api_response.py  test_quant_integration.py
apps/backtester/: pyproject.toml
apps/dashboard/: package.json  tsconfig.tsbuildinfo
apps/mt5-bridge/: pyproject.toml
database/migrations/: env.py  script.py.mako
database/seed/: add_xauusd.py  symbols.py
docker/: docker-compose.yml
docs/: 00_PROJECT_VISION.md  01_ROADMAP.md  02_ARCHITECTURE.md  BACKTEST_MODULE_PRD.md  ROADMAP_UNIFIED_SIGNAL_PLATFORM.md
docs/ai/: DATASET_SPEC.md  FEATURE_DICTIONARY.md  MLOPS.md  MODEL_EVALUATION.md  MODEL_TRAINING.md  PRD_AI_STRATEGY_OPTIMIZATION.md  SHAP_EXPLAINABILITY.md
docs/api/: API_SPEC.md  (+3 more)
scripts/: backfill_ohlc_db.py  check_data_availability.py  evaluate_decision_pipeline.py  validate_macro_weights.py
(+113 files in other folders)
