[project]
name = "al-syaka-quant-ai"
version = "0.1.0"
description = "AI-powered Market Intelligence & Trading Signal Platform"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "yfinance>=1.5.1",
]

[tool.uv]
package = false

[tool.uv.sources]
al-syaka-common = { workspace = true }
al-syaka-indicators = { workspace = true }
al-syaka-feature-engineering = { workspace = true }
al-syaka-risk = { workspace = true }
al-syaka-backtester = { workspace = true }
al-syaka-ai-engine = { workspace = true }
al-syaka-mt5-bridge = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "llvmlite>=0.40",
    "numba>=0.60",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/api",
    "apps/ai-engine",
    "apps/backtester",
    "apps/signal-service",
    "apps/mt5-bridge",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "apps"]
