[project]
name = "al-syaka-ai-engine"
version = "0.1.0"
description = "AI model training, inference & explainability for Al-Syaka Quant AI"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "shap>=0.46.0",
    "torch>=2.2.0",
    "al-syaka-common",
    "al-syaka-indicators",
    "al-syaka-feature-engineering",
]
