[project]
name = "al-syaka-api"
version = "0.1.0"
description = "Al-Syaka Quant AI — FastAPI REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "al-syaka-common",
    "al-syaka-indicators",
    "al-syaka-feature-engineering",
    "al-syaka-risk",
    "al-syaka-backtester",
    "al-syaka-mt5-bridge",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
